--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.security.oauth2.authorizationserver.client.oidc-client.registration.scope
 spring.security.oauth2.authorizationserver.client.oidc-client.require-authorization-consent=true
 
 logging.level.org.springframework.security.*=TRACE
+logging.level.org.springframework.web.*=TRACE
